<resources>
    <string name="app_name">AnimalShelter</string>
    <string name="hello_to_animal_shelter">Welcome to \"Animal Shelter\"</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_shelter_title">Enter shelter title</string>
    <string name="edit_address">Edit address</string>
    <string name="save">save</string>
    <string name="enter_kind">Enter kind</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_sex">Enter gender</string>
    <string name="enter_walk_periodic">Enter walk periodic</string>
    <string name="animal_registration_card">Animal registration card</string>
    <string name="shelter_createing_card">Shelter createing card</string>
    <string name="volunteer_registration_card">Volunteer registration card</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="edit_phone_number">Edit phone number</string>
    <string name="choose_shelter">choose shelter</string>
    <string name="new_shelter">new shelter</string>
    <string name="new_volunteer">new volunteer</string>
    <string name="animal_has_not_walked">The animal has not walked</string>
    <string name="list_is_empty">List is empty</string>
    <string name="animal_menu">Animal menu</string>
    <string name="kind">Kind:</string>
    <string name="name">Name:</string>
    <string name="last_walk_time">Last walk time:</string>
    <string name="period_of_walk">Period of walk:</string>
    <string name="title_activity_route_map">Map</string>
    <string name="first_name">first_name</string>
    <string name="last_name">last_name</string>
    <string name="remove_last_nadded_marker">Remove last\nadded marker</string>
    <string name="remove_all_n_markers">Remove all\nmarkers</string>
    <string name="create_route">Create route</string>
    <string name="take_animal_for_a_walk">Take animal\nfor a walk</string>
    <string name="show_walk_history">Show walk\nhistory</string>
    <string name="show_the_route">Show the route</string>
</resources>
