<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.home.main_screen.main_menu_fragment.MainMenuFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_menu_title"
        android:background="@drawable/green_rect_background"
        android:gravity="center"

        android:text="@string/hello_to_animal_shelter"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_home_screen_choose_shelter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_main_selector"
        android:drawableEnd="@drawable/ic_main_screen_add_new_task_changeble"
        android:gravity="start|center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/choose_shelter"
        android:textColor="@drawable/yes_changeable_text_color"
        app:layout_constraintBottom_toTopOf="@+id/btn_home_screen_new_shelter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_home_screen_new_shelter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_main_selector"
        android:drawableEnd="@drawable/ic_main_screen_add_new_task_changeble"
        android:gravity="start|center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/new_shelter"
        android:textColor="@drawable/yes_changeable_text_color"
        app:layout_constraintBottom_toTopOf="@+id/btn_home_screen_new_volunteer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btn_home_screen_new_volunteer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_main_selector"
        android:drawableEnd="@drawable/ic_main_screen_add_new_task_changeble"
        android:gravity="start|center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/new_volunteer"
        android:textColor="@drawable/yes_changeable_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>