<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green36"
    tools:context=".view.home.create_shelter.CreateShelterCard">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Shelter createing card"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/et_shelter_card_shelter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_shelter_title" />

        <EditText
            android:id="@+id/et_shelter_card_shelter_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_address" />

        <EditText
            android:id="@+id/et_shelter_card_shelter_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Edit phone number" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_save_new_shelter_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>